--- a/assets/styles.css
+++ b/assets/styles.css
@@ -27,7 +27,7 @@ body{
     flex-direction: column;
     background-color: #00072D;
     padding: 2rem;
-    grid-column: 1/3;
+    grid-column: span 1;
 }
 
 .side_bar_title{
@@ -48,25 +48,61 @@ body{
 
 .MainSection{
     padding: 1rem;
-    background-color: yellow;
-    grid-column: 3/11;
+    background-color: #e0e0e0;
+    grid-column: span 9;
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-auto-rows: minmax(100px,auto);
-    gap: 10px;
+    /*grid-auto-rows: minmax(100px, auto);*/
+    grid-template-rows: repeat(8,1fr);
+    row-gap: 1rem;
+    column-gap: 0.5rem;
 }
 
 .Container_1{
-    background-color: red;
+    background-color: whitesmoke;
+    box-shadow: 2px 2px 10px 0px rgba(92,91,92,1);
     grid-column: span 1;
+    border-radius: 1rem;
+    transition: transform .5s;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.Container_1:hover{
+    transform: scale(1.02);
 }
 
 .Container_2{
-    background-color: blue;
+    background-color: whitesmoke;
+    box-shadow: 2px 2px 10px 0px rgba(92,91,92,1);
+    border-radius: 1rem;
     grid-column: span 2;
+    grid-row: span 3;
+    transition: transform .5s;
+}
+
+.Container_2:hover{
+    transform: scale(1.01);
 }
 
 .Container_3{
-    background-color: yellowgreen;
     grid-column: span 4;
+    grid-row: span 3;
+    background-color: whitesmoke;
+    box-shadow: 2px 2px 10px 0px rgba(92,91,92,1);
+    border-radius: 1rem;
+}
+
+.MainSection .Container_1 .under{
+    color: red;
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+.MainSection .Container_1 .above{
+    color: green;
+    font-size: 2rem;
+    font-weight: bolder;
 }
