--- a/assets/styles.css
+++ b/assets/styles.css
@@ -89,10 +89,20 @@ body{
 
 .Container_3{
     grid-column: span 4;
-    grid-row: span 3;
+    grid-row: span 4;
     background-color: whitesmoke;
     box-shadow: 2px 2px 10px 0px rgba(92,91,92,1);
     border-radius: 1rem;
+    padding: 0.5rem;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+.Container_3_graph{
+    width: 100%;    
+    height: 100%;
+    background-color: whitesmoke;
 }
 
 .MainSection .Container_1 .under{
